--- a/src/static/css/components/About/_about.scss
+++ b/src/static/css/components/About/_about.scss
@@ -16,6 +16,13 @@
         padding-bottom: 0.2rem;
 
     }
+    &__img{
+        position: absolute;
+        z-index: -1;
+        left: 0%;
+
+        width:100%
+    }
     @include respond(tab-port) {
         h3{
             text-align: left;
@@ -31,5 +38,28 @@
     
         }
 
+    }
+    &__mantra{
+        margin:0;
+
+        h3{
+            text-align: center;
+            font-size: 4rem;
+            padding:0px;
+            margin-bottom:0;
+
+            font-weight: 500;
+            padding-bottom: 0rem;
+        }
+        p{
+            text-align: center;
+            padding-top : 2rem;
+            margin:0;
+
+            font-size: 1.5rem;
+            font-weight: 300;
+            padding-bottom: 0.2rem;
+    
+        }
     }
 }
