--- a/src/static/css/base/_base.scss
+++ b/src/static/css/base/_base.scss
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
 
+@font-face {
+    font-family: 'Hearth Stone';
+    src: url('Hearth_Stone.ttf');
+}
+
 *, *::before, *::after {
     margin: 0;
     padding: 0;
