--- a/src/static/css/main.scss
+++ b/src/static/css/main.scss
@@ -6,6 +6,7 @@
 @import './components/Carousel/carousel';
 @import './components/Offer/offer';
 @import './components/About/about';
+@import './components/Mantra/mantra.scss';
 @import './components/Founder/founder';
 @import './components/Contact/Contact.scss';
 @import './components/Footer/footer';
