--- a/src/static/css/main.scss
+++ b/src/static/css/main.scss
@@ -3,6 +3,7 @@
 @import './base/base';
 @import './base/layout';
 
+@import './components/Navbar/navbar.scss';
 @import './components/Carousel/carousel';
 @import './components/Offer/offer';
 @import './components/About/about';
