--- a/src/static/css/components/Offer/_offer.scss
+++ b/src/static/css/components/Offer/_offer.scss
@@ -1,179 +1,280 @@
-.program{
-    position: relative;
-    overflow-y: hidden;
-    // height :913px;
-    &__img{
-        position: absolute;
-        z-index: -1;
-        left: 0%;
+// .program{
+//     position: relative;
+//     overflow-y: hidden;
+//     // height :913px;
+//     &__img{
+//         position: absolute;
+//         z-index: -1;
+//         left: 0%;
 
-        width:100%
-    }
-}
+//         width:100%
+//     }
+// }
 
-.offer{
-    
-    margin-top: 5%;
-    margin-left: 10%;
-    margin-right: 10%;
-    display: flex;
+// .offer{
+//     padding-left: 15px;
+//     padding-right: 15px;
+//     display: flex;
 
 
-    @include respond(tab-port) { // width < 900?
-        flex-direction: column;
-        flex-wrap: wrap;
-    }
+//     @include respond(tab-port) { // width < 900?
+//         flex-direction: column;
+//         flex-wrap: wrap;
+//     }
 
-    &__detail
-    {
-        display: flex;
-        flex-direction: column;
-        margin: 0;
-        flex-wrap: wrap;
-        justify-content: space-around;
+//     &__detail
+//     {
+//         display: flex;
+//         flex-direction: column;
+//         margin: 0;
+//         flex-wrap: wrap;
+//         justify-content: space-around;
 
-        @include respond(tab-port) { // width < 900?
-            flex-direction: row;
-        }
+//         @include respond(tab-port) { // width < 900?
+//             flex-direction: row;
+//         }
 
-        &__tab{
+//         &__tab{
 
 
-            border-top: solid #f4e22c .15rem;
-            border-right: solid #f4e22c .1rem;
-            margin: 0;
-            border-bottom: solid #f4e22c .5rem;
-            padding-right: .3rem;
-            width: 18rem;
-            margin-top: 1rem;
-            align-items: flex-start;
-            justify-content: flex-start;
-            @include respond(tab-port) { // width < 900?
-               margin-left: 0.5rem;
-               width: 12rem;
+//             border-top: solid #f4e22c .15rem;
+//             border-right: solid #f4e22c .1rem;
+//             margin: 0;
+//             border-bottom: solid #f4e22c .5rem;
+//             padding-right: .3rem;
+//             width: 18rem;
+//             margin-top: 1rem;
+//             align-items: flex-start;
+//             justify-content: flex-start;
+//             @include respond(tab-port) { // width < 900?
+//                margin-left: 0.5rem;
+//                width: 12rem;
 
-               flex-wrap: wrap;
-            }
-            h3{
-               margin: 0;
-                align-self: flex-start;
-                text-align: start;
-                font-weight: 600;
-                font-size: 1.5rem;
-                margin-left: 1.75rem;
-                margin-top: 0.5rem;
+//                flex-wrap: wrap;
+//             }
+//             h3{
+//                margin: 0;
+//                 align-self: flex-start;
+//                 text-align: start;
+//                 font-weight: 600;
+//                 font-size: 1.5rem;
+//                 margin-left: 1.75rem;
+//                 margin-top: 0.5rem;
 
-                color: #f4e22c ;
-                  @include respond(tab-port) { // width < 900?
-                    font-weight: 300;
-                    font-size: 1rem;
-                    margin-left: 1rem;
-                    margin-top: 0.5rem;
-                }
+//                 color: #f4e22c ;
+//                   @include respond(tab-port) { // width < 900?
+//                     font-weight: 300;
+//                     font-size: 1rem;
+//                     margin-left: 1rem;
+//                     margin-top: 0.5rem;
+//                 }
 
-            }
-            p{
-                margin: 0;
-                align-self: flex-start;
+//             }
+//             p{
+//                 margin: 0;
+//                 align-self: flex-start;
 
-                text-align: start;
-                font-size: 1rem;
-                margin-left: 1.75rem;
-                margin-top: 0.5rem;
-                margin-bottom: 0.5rem;
-                @include respond(tab-port) { // width < 900?
-                    font-size: 0.5rem;
-                    margin-left: 1rem;
-                    margin-top: 0.5rem;
-                    margin-bottom: 0.5rem;
+//                 text-align: start;
+//                 font-size: 1rem;
+//                 margin-left: 1.75rem;
+//                 margin-top: 0.5rem;
+//                 margin-bottom: 0.5rem;
+//                 @include respond(tab-port) { // width < 900?
+//                     font-size: 0.5rem;
+//                     margin-left: 1rem;
+//                     margin-top: 0.5rem;
+//                     margin-bottom: 0.5rem;
 
-                }
+//                 }
 
-            }
-            &__button {
-                text-align: left;
-                background: transparent;
-                margin: 0;
-                margin-left: 1.75rem;
+//             }
+//             &__button {
+//                 text-align: left;
+//                 background: transparent;
+//                 margin: 0;
+//                 margin-left: 1.75rem;
 
-                margin-bottom: 0.5rem;
+//                 margin-bottom: 0.5rem;
 
-                &--text {
+//                 &--text {
 
-                    cursor: pointer;
-                    border: none;
-                    outline: none;
-                    background: transparent;
-                }
-                &--img {
-                    cursor: pointer;
-                    border: none;
-                    outline: none;
-                    cursor: pointer;
-                }
-                @include respond(tab-port) { // width < 900?
-                    font-size: 0.5rem;
-                    margin-left: 0.2rem;
-                    margin-top: 1rem;
-                    margin-bottom: .5rem;
+//                     cursor: pointer;
+//                     border: none;
+//                     outline: none;
+//                     background: transparent;
+//                 }
+//                 &--img {
+//                     cursor: pointer;
+//                     border: none;
+//                     outline: none;
+//                     cursor: pointer;
+//                 }
+//                 @include respond(tab-port) { // width < 900?
+//                     font-size: 0.5rem;
+//                     margin-left: 0.2rem;
+//                     margin-top: 1rem;
+//                     margin-bottom: .5rem;
 
-                }
-            }
+//                 }
+//             }
 
-        }
+//         }
 
-    }
-    &__content{
-        overflow-y: auto;
-        height: 36rem;
+//     }
+//     &__content{
+//         overflow-y: auto;
+//         height: 36rem;
 
-        h3{
-            margin: 0;
-             align-self: flex-start;
-             text-align: start;
+//         h3{
+//             margin: 0;
+//              align-self: flex-start;
+//              text-align: start;
 
-             font-weight: 500;
-             font-size: 3rem;
-             margin-left: 3rem;
-             margin-top: 1rem;
+//              font-weight: 500;
+//              font-size: 3rem;
+//              margin-left: 3rem;
+//              margin-top: 1rem;
 
-             color: #121111 ;
+//              color: #121111 ;
 
-         }
-         p{
-            margin: 0;
-            align-self: flex-start;
-            text-align: start;
-            font-size: 1rem;
-            margin-left: 3rem;
-            margin-top: 0.5rem;
-            padding-left: .5rem;
-            padding-right: 2rem;
+//          }
+//          p{
+//             margin: 0;
+//             align-self: flex-start;
+//             text-align: start;
+//             font-size: 1rem;
+//             margin-left: 3rem;
+//             margin-top: 0.5rem;
+//             padding-left: .5rem;
+//             padding-right: 2rem;
 
-            margin-bottom: 1.75rem;
+//             margin-bottom: 1.75rem;
 
-        }
-        @include respond(tab-port) {
-            h3{                
-                margin: 0;
-                font-size: 2.2rem;
-                font-weight: 300;
-                padding: .10rem;
-                padding-bottom: 0.5rem;
+//         }
+//         @include respond(tab-port) {
+//             h3{                
+//                 margin: 0;
+//                 font-size: 2.2rem;
+//                 font-weight: 300;
+//                 padding: .10rem;
+//                 padding-bottom: 0.5rem;
                 
-            }
-            p{
-                margin: 0;
-                text-align: left;
-                font-size: 0.75rem;
-                font-weight: 100;
-                padding: .10rem;
-                padding-bottom: 0.3rem;
+//             }
+//             p{
+//                 margin: 0;
+//                 text-align: left;
+//                 font-size: 0.75rem;
+//                 font-weight: 100;
+//                 padding: .10rem;
+//                 padding-bottom: 0.3rem;
         
-            }
-        }
+//             }
+//         }
         
+//     }
+
+
+// }
+
+.offer {
+    overflow: hidden;
+    
+    &__banner {
+        padding: 5rem 0;
+        background-image: url('../../../img/Program.jpg');
+        background-position: center center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        object-fit: cover;
+        display: block;
+        border: none;
     }
 
+    &__card {
+        text-align: left;
+        border: 2px solid #f4e22c;
+        border-left: none;
+        margin-bottom: 1rem;
+        padding: 1rem 2rem;
+        border-radius: 5px;
 
+        &-header {
+            color: #f4e22c;
+            font-weight: 600;
+            font-size: 1.5rem;
+            // margin-bottom: 1rem;
+        }
+
+        &-button {
+            outline: none;
+            border: none;
+            background: transparent;
+            cursor: pointer;
+
+            &:focus, &:active {
+                outline: none;
+            }
+        }
+
+        &-text {
+            font-size: 1rem;
+            margin-bottom: 1rem;
+        }
+
+        &-wrapper {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+        }
+    }
+
+    &__wrapper {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        padding-left: 15px;
+        padding-right: 15px;
+
+        @media (min-width: 768px) {
+            flex: 0 0 35%;
+            max-width: 35%;
+            // flex: 0 0 33.333333%;
+            // max-width: 33.333333%;
+        }
+    }
+
+    &__content {
+        padding-left: 15px;
+        padding-right: 15px;
+        display: flex;
+        width: 100%;
+
+        @media (min-width: 768px) {
+            flex: 0 0 65%;
+            max-width: 65%;
+            // flex: 0 0 66.666667%;
+            // max-width: 66.666667%;
+        }
+    }
+
+    &__text {
+        text-align: left;
+        margin-bottom: 2rem;
+        font-size: 1.2rem;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    &__header {
+
+        h1 {
+            font-size: 3rem;
+            font-weight: 400;
+            margin-bottom: 2rem;
+            text-align: left;
+            padding-left: 15px;
+            padding-right: 15px;
+
+        }
+    }
 }
