--- a/src/static/css/base/_base.scss
+++ b/src/static/css/base/_base.scss
@@ -5,6 +5,16 @@
     src: url('Hearth_Stone.ttf');
 }
 
+@font-face {
+    font-family: 'Poppins-Regular';
+    src: url('../../font/Poppins-Regular.ttf');
+}
+
+@font-face {
+    font-family: 'Poppins-Semi';
+    src: url('../../font/Poppins-SemiBold.ttf');
+}
+
 *, *::before, *::after {
     margin: 0;
     padding: 0;
