--- a/src/static/css/components/Carousel/_carousel.scss
+++ b/src/static/css/components/Carousel/_carousel.scss
@@ -1,17 +1,6 @@
 .hero {
     position: relative;
 
-    // &__img {
-    //     height: 70vh;
-    //     background-position: center center;
-    //     background-size: cover;
-    //     background-repeat: no-repeat;
-
-    //     @include respond(tab-port) {
-    //         height: 50vh;
-    //     }
-    // }
-
     &__img {
         display: flex;
         justify-content: center;
@@ -20,44 +9,35 @@
     &__caption {
         position: absolute;
         top: 30%;
+    }
 
+    &__header {
+        color: #f4e22c;
+        font-family: 'Hearth Stone', sans-serif;
+        font-size: 6.25rem;
+        font-weight: 300;
+        margin: 0 auto;
         
-
-        span {
-            color: #000;
+        @include respond(tab-port) {
+            margin-bottom: 1rem;
+            line-height: 1.3;
         }
+    }
 
-        h3 {
-            color: #f4e22c;
-            font-family: 'Hearth Stone', sans-serif;
-            font-size: 6.25rem;
-            margin-bottom: 0;
-            font-weight: 300;
-            // letter-spacing: 5px;
-            // font-style: italic;
+    &__content {
+        color: #fff;
+        font-size: 1.5rem;
+        margin-bottom: 0;
+        margin-top: 0;
 
-            @include respond(tab-port) {
-                font-size: 1.5rem;
-            }
-        }
+        padding-left:5rem;
+        padding-right:5rem;
 
-        p {
-            color: #fff;
-            font-size: 1.25rem;
-            margin-bottom: 0;
-            margin-top: 0;
-
-            padding-left:5rem;
-            padding-right:5rem;
-
-            font-weight: normal;
-            @include respond(tab-port) {
-                font-size: 1rem;
-                padding-left:1.5rem;
-                padding-right:1.5rem;
-    
-                // white-space: nowrap;
-            }
+        font-weight: normal;
+        @include respond(tab-port) {
+            font-size: 1.8rem;
+            padding-left:1.5rem;
+            padding-right:1.5rem;
         }
     }
 }
@@ -71,7 +51,7 @@
     background: rgba(235, 77, 55, .5);
 }
 
-.mobile {
+.mobile-carousel {
     display: none;
     width: 100%;
     @include respond(phone) {
@@ -79,7 +59,7 @@
     }
 }
 
-.desktop {
+.desktop-carousel {
     display: block;
     width: 100%;
     @include respond(phone) {
