--- a/src/static/css/components/Founder/_founder.scss
+++ b/src/static/css/components/Founder/_founder.scss
@@ -5,6 +5,7 @@
         @media (min-width: 768px) {
             flex: 0 0 33.333333%;
             max-width: 33.333333%;
+            margin-bottom: 0;
         }
         
         display: flex;
@@ -12,30 +13,28 @@
         justify-content: center;
         align-items: flex-start;
         padding-left: 15px;
-        padding-right: 15px;
+        padding-right: 2rem;
+        margin-bottom: 2rem;
     }
 
     &__content {
         padding-left: 15px;
         padding-right: 15px;
-
+        
         @media (min-width: 768px) {
             flex: 0 0 66.666667%;
             max-width: 66.666667%;
+
+            padding-left: 2rem;
         }
     }
 
     &__picture {
-        // width: 350px;
-        // height: 350px;
         margin-top: 1rem;
         position: relative;
-        // overflow: hidden;
-        // border-radius: 50%;
 
         @include respond(tab-port) { // width < 900?
             width: 200px;
-            // height: 200px;
         }
     }
 
@@ -59,6 +58,5 @@
     &__tag {
         max-width: 100%;
         height: auto;
-        // border-radius: 50%;
     }
 }
