--- a/src/static/css/components/Mantra/mantra.scss
+++ b/src/static/css/components/Mantra/mantra.scss
@@ -4,7 +4,7 @@
     background-repeat: no-repeat;
     object-fit: cover;
     // background-attachment: fixed;
-    padding: 5rem 0;
+    padding: 2rem 0;
     margin-top: 2rem;
 
     &__primary {
@@ -16,5 +16,6 @@
     &__secondary {
         font-weight: 400;
         font-size: 2rem;
+        letter-spacing: 1.2px;
     }
 }
