--- a/src/static/css/components/Offer/_offer.scss
+++ b/src/static/css/components/Offer/_offer.scss
@@ -1,181 +1,3 @@
-// .program{
-//     position: relative;
-//     overflow-y: hidden;
-//     // height :913px;
-//     &__img{
-//         position: absolute;
-//         z-index: -1;
-//         left: 0%;
-
-//         width:100%
-//     }
-// }
-
-// .offer{
-//     padding-left: 15px;
-//     padding-right: 15px;
-//     display: flex;
-
-
-//     @include respond(tab-port) { // width < 900?
-//         flex-direction: column;
-//         flex-wrap: wrap;
-//     }
-
-//     &__detail
-//     {
-//         display: flex;
-//         flex-direction: column;
-//         margin: 0;
-//         flex-wrap: wrap;
-//         justify-content: space-around;
-
-//         @include respond(tab-port) { // width < 900?
-//             flex-direction: row;
-//         }
-
-//         &__tab{
-
-
-//             border-top: solid #f4e22c .15rem;
-//             border-right: solid #f4e22c .1rem;
-//             margin: 0;
-//             border-bottom: solid #f4e22c .5rem;
-//             padding-right: .3rem;
-//             width: 18rem;
-//             margin-top: 1rem;
-//             align-items: flex-start;
-//             justify-content: flex-start;
-//             @include respond(tab-port) { // width < 900?
-//                margin-left: 0.5rem;
-//                width: 12rem;
-
-//                flex-wrap: wrap;
-//             }
-//             h3{
-//                margin: 0;
-//                 align-self: flex-start;
-//                 text-align: start;
-//                 font-weight: 600;
-//                 font-size: 1.5rem;
-//                 margin-left: 1.75rem;
-//                 margin-top: 0.5rem;
-
-//                 color: #f4e22c ;
-//                   @include respond(tab-port) { // width < 900?
-//                     font-weight: 300;
-//                     font-size: 1rem;
-//                     margin-left: 1rem;
-//                     margin-top: 0.5rem;
-//                 }
-
-//             }
-//             p{
-//                 margin: 0;
-//                 align-self: flex-start;
-
-//                 text-align: start;
-//                 font-size: 1rem;
-//                 margin-left: 1.75rem;
-//                 margin-top: 0.5rem;
-//                 margin-bottom: 0.5rem;
-//                 @include respond(tab-port) { // width < 900?
-//                     font-size: 0.5rem;
-//                     margin-left: 1rem;
-//                     margin-top: 0.5rem;
-//                     margin-bottom: 0.5rem;
-
-//                 }
-
-//             }
-//             &__button {
-//                 text-align: left;
-//                 background: transparent;
-//                 margin: 0;
-//                 margin-left: 1.75rem;
-
-//                 margin-bottom: 0.5rem;
-
-//                 &--text {
-
-//                     cursor: pointer;
-//                     border: none;
-//                     outline: none;
-//                     background: transparent;
-//                 }
-//                 &--img {
-//                     cursor: pointer;
-//                     border: none;
-//                     outline: none;
-//                     cursor: pointer;
-//                 }
-//                 @include respond(tab-port) { // width < 900?
-//                     font-size: 0.5rem;
-//                     margin-left: 0.2rem;
-//                     margin-top: 1rem;
-//                     margin-bottom: .5rem;
-
-//                 }
-//             }
-
-//         }
-
-//     }
-//     &__content{
-//         overflow-y: auto;
-//         height: 36rem;
-
-//         h3{
-//             margin: 0;
-//              align-self: flex-start;
-//              text-align: start;
-
-//              font-weight: 500;
-//              font-size: 3rem;
-//              margin-left: 3rem;
-//              margin-top: 1rem;
-
-//              color: #121111 ;
-
-//          }
-//          p{
-//             margin: 0;
-//             align-self: flex-start;
-//             text-align: start;
-//             font-size: 1rem;
-//             margin-left: 3rem;
-//             margin-top: 0.5rem;
-//             padding-left: .5rem;
-//             padding-right: 2rem;
-
-//             margin-bottom: 1.75rem;
-
-//         }
-//         @include respond(tab-port) {
-//             h3{                
-//                 margin: 0;
-//                 font-size: 2.2rem;
-//                 font-weight: 300;
-//                 padding: .10rem;
-//                 padding-bottom: 0.5rem;
-                
-//             }
-//             p{
-//                 margin: 0;
-//                 text-align: left;
-//                 font-size: 0.75rem;
-//                 font-weight: 100;
-//                 padding: .10rem;
-//                 padding-bottom: 0.3rem;
-        
-//             }
-//         }
-        
-//     }
-
-
-// }
-
 .offer {
     overflow: hidden;
     
@@ -194,16 +16,15 @@
         text-align: left;
         border: 2px solid #f4e22c;
         border-bottom: 7px solid #f4e22c;
-        // border-left: none;
         margin-bottom: 1rem;
         padding: 1rem 2rem;
         border-radius: 6px;
+        z-index: 10;
 
         &-header {
             color: #f4e22c;
             font-weight: 600;
             font-size: 1.875rem;
-            // margin-bottom: 1rem;
         }
 
         &-button {
@@ -235,12 +56,13 @@
         justify-content: center;
         padding-left: 15px;
         padding-right: 15px;
-
+        margin: 0 15px;
+        
         @media (min-width: 768px) {
             flex: 0 0 35%;
             max-width: 35%;
-            // flex: 0 0 33.333333%;
-            // max-width: 33.333333%;
+            padding-right: 2rem;
+            margin: 0;
         }
     }
 
@@ -249,12 +71,27 @@
         padding-right: 15px;
         display: flex;
         width: 100%;
-
+        overflow: hidden;
+        order: -1;
+        
         @media (min-width: 768px) {
+            order: 0;
             flex: 0 0 65%;
             max-width: 65%;
-            // flex: 0 0 66.666667%;
-            // max-width: 66.666667%;
+            padding-left: 2rem;
+        }
+
+        &--wrapper {
+            display: flex;
+            flex-direction: column;
+            height: 0;
+            opacity: 0;
+            transition: all .3s ease;
+
+            &-animate {
+                opacity: 1;
+                height: 100%;
+            }
         }
     }
 
@@ -262,8 +99,13 @@
         text-align: left;
         margin-bottom: 2rem;
         font-size: 1.2rem;
+        transition: .3s all ease;
         padding-left: 15px;
         padding-right: 15px;
+
+        &--animate {
+            transform: translateX(0);
+        }
     }
 
     &__header {
