--- a/src/static/css/main.scss
+++ b/src/static/css/main.scss
@@ -11,6 +11,7 @@
 @import './components/Founder/founder';
 @import './components/Contact/Contact.scss';
 @import './components/Footer/footer';
+@import './components/Floater/floater';
 
 
 
