--- a/src/static/css/components/Mantra/mantra.scss
+++ b/src/static/css/components/Mantra/mantra.scss
@@ -9,8 +9,12 @@
 
     &__primary {
         font-family: 'Hearth Stone', sans-serif;
-        font-size: 6.5625rem;
+        font-size: 4.5rem;
         font-weight: 500;
+        
+        @media (min-width: 768px) {
+            font-size: 6.5625rem;
+        }
     }
 
     &__secondary {
