--- a/src/static/css/components/Floater/_floater.scss
+++ b/src/static/css/components/Floater/_floater.scss
@@ -1,12 +1,16 @@
 .floater {
     position: fixed;
     top: 60%;
-    left: 0;
+    right: 0;
     width: 60px;
     z-index: 1000;
 
     @media (min-width: 768px) {
         display: none;
+    }
+
+    &__list {
+        list-style-type: none;
     }
 
     &__item {
