--- a/src/static/css/components/Mantra/mantra.scss
+++ b/src/static/css/components/Mantra/mantra.scss
@@ -21,6 +21,6 @@
         font-weight: 400;
         font-size: 2rem;
         letter-spacing: 1.2px;
-        margin-bottom: .5rem;
+        margin-top: .5rem;
     }
 }
