--- a/src/static/css/main.scss
+++ b/src/static/css/main.scss
@@ -6,10 +6,12 @@
 @import './components/Navbar/navbar.scss';
 @import './components/Carousel/carousel';
 @import './components/Offer/offer';
+@import './components/Offer/offer-page';
 @import './components/About/about';
 @import './components/Mantra/mantra.scss';
 @import './components/Founder/founder';
 @import './components/Contact/Contact.scss';
+@import './components/Dropdown/dropdown';
 @import './components/Footer/footer';
 @import './components/Floater/floater';
 
