--- a/src/static/css/base/_layout.scss
+++ b/src/static/css/base/_layout.scss
@@ -18,7 +18,8 @@
     }
 
     @media (min-width: 1120px) {
-        max-width: 1115px;
+        max-width: 1400px;
+        // max-width: 1140px;
     }
 }
 
