--- a/src/static/css/components/Offer/_offer.scss
+++ b/src/static/css/components/Offer/_offer.scss
@@ -1,9 +1,10 @@
 .offer {
     overflow: hidden;
     position: relative;
+    background: #f4f4f4;
+    padding: 10rem 0;
     
     &__banner {
-        padding: 5rem 0;
         background-image: url('../../../img/Program.jpg');
         background-position: center center;
         background-size: cover;
@@ -13,60 +14,51 @@
         border: none;
     }
 
-    &__card {
-        text-align: left;
-        border: 2px solid #f4e22c;
-        border-bottom: 7px solid #f4e22c;
-        margin-bottom: 1rem;
-        padding: 1rem 2rem;
-        border-radius: 6px;
-        z-index: 10;
+    &__svg {
+        width: 100%;
+        height: 100%;
+        max-width: 100%;
+    }
 
-        &-header {
-            color: #f4e22c;
-            font-weight: 600;
-            font-size: 1.875rem;
+    &__container {
+        @media (min-width: 768px) {
+            flex: 0 0 100%;
+            max-width: 100%;
+        }
+    }
+
+    &__card {
+        display: grid;
+        margin: 0 auto;
+        margin-left: 15px;
+        margin-right: 15px;
+        margin-top: 2rem;
+        width: 100%;
+        grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+        grid-gap: 1rem;
+        
+        @media (min-width: 1120px) {
+            grid-template-columns: repeat(4, 1fr);
+            grid-gap: 2rem;
         }
 
-        &-button {
-            outline: none;
-            border: none;
-            background: transparent;
-            cursor: pointer;
+        &-body {
+            background: #fff;
+            padding: 2rem;
+        }
 
-            &:focus, &:active {
-                outline: none;
-            }
+        &-image {
+            height: 250px;
+        }
+
+        &-subheading {
+            margin-top: 1rem;
+            color: #7ccdce;
         }
 
         &-text {
-            font-size: 1rem;
-            margin-bottom: 1rem;
-        }
-
-        &-wrapper {
-            display: flex;
-            flex-direction: column;
-            width: 100%;
-
-            @media (min-width: 768px) {
-                overflow-y: auto;
-                max-height: 650px;
-            }
-
-            &::-webkit-scrollbar {
-                width: .5rem;
-            }
-
-            &::-webkit-scrollbar-track {
-                background: rgba(255, 255, 255, 0);
-                border-radius: 50px;
-            }
-
-            &::-webkit-scrollbar-thumb {
-                background-color: #f4e22c;
-                border-radius: 50px;
-              }
+            margin-top: .5rem;
+            color: #464646;
         }
     }
 
@@ -76,15 +68,6 @@
         justify-content: center;
         padding-left: 15px;
         padding-right: 15px;
-        margin: 0 15px;
-        z-index: 100;
-        
-        @media (min-width: 768px) {
-            flex: 0 0 35%;
-            max-width: 35%;
-            padding-right: 2rem;
-            margin: 0;
-        }
     }
 
     &__content {
