--- a/src/static/css/components/Contact/Contact.scss
+++ b/src/static/css/components/Contact/Contact.scss
@@ -3,7 +3,7 @@
     padding: 5rem 0;
     margin-bottom: 0;
     background: #f5f5f5;
-
+    min-height:90vh;
     &__medium {
         padding-left: 15px;
         padding-right: 15px;
