--- a/src/static/css/components/Footer/_footer.scss
+++ b/src/static/css/components/Footer/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
     background: #1E1A1B;
     padding: 2rem 0;
-
+    margin-bottom: 0%;
     &__wrapper {
         display: grid;
         grid-template-columns: 1fr 1fr;
