--- a/src/static/css/components/Navbar/navbar.scss
+++ b/src/static/css/components/Navbar/navbar.scss
@@ -22,6 +22,7 @@
   width: 150px;
   max-width: 100%;
   height: auto;
+
 }
 
 .active-nav {
@@ -31,6 +32,7 @@
 .navbar-hamburg{
     z-index: 3;
     cursor: pointer;
+    padding: 3rem;
 }
 .navbar-hamburg-bar {
     width: 2rem;
