--- a/src/static/css/components/Offer/_offer-page.scss
+++ b/src/static/css/components/Offer/_offer-page.scss
@@ -53,6 +53,16 @@
             border: solid #f4e22c;
             border-width: 2px 2px 7px;
             text-decoration: none;
+
+        }
+        &-body-active {
+            background: #f4e22c;
+            padding: 0 2rem;
+            border: solid #7ccdce;
+            border-width: 2px 2px 7px;
+            text-decoration: none;
+            font-weight: 800;
+
         }
 
         &-image {
