--- a/src/static/css/components/Dropdown/_dropdown.scss
+++ b/src/static/css/components/Dropdown/_dropdown.scss
@@ -16,23 +16,24 @@
     &__options {
         position: absolute;
         left: 0;
+        right: 0;
         background: #eee;
         padding: 1rem;
         z-index: 10;
         text-align: left;
-        max-width: 250px;
+        // max-width: 250px;
         max-height: 245px;
         overflow-y: auto;
         display: none;
 
         @media screen and (max-width: 700px) {
             right: 0;
-            left: unset;
+            left: 0;
         }
 
         @include respond(phone) {
             left: 0;
-            right: unset;
+            right: 0;
         }
 
         &--show {
