--- a/src/static/css/components/Navbar/navbar.scss
+++ b/src/static/css/components/Navbar/navbar.scss
@@ -73,12 +73,14 @@
   }
   .navbar-list-active{
     font-size: 3rem;
+    text-decoration: none;
     color: #FF002C;
  
   }
   .navbar-list{
     font-size: 3rem;
     color: black;
+    text-decoration: none;
     padding: .4rem;
   }
   .navbar-list:hover{
@@ -119,3 +121,60 @@
     Z-index: 2;
   }
   
+
+  .navbar-mobile {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    overflow: hidden;
+    align-items: flex-start;
+    z-index: 100;
+    position: fixed;
+    width: 100%;
+    transition: all 300ms ease-in;
+
+    &__hamburg {
+      margin-right: 2rem;
+    }
+
+    &__wrapper {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    &__collapse {
+      width: 100%;
+      max-height: 0;
+      background: #fff;
+      transition: max-height 300ms ease-in;
+
+      &--show {
+        max-height: 200px;
+      }
+    }
+
+    &__item {
+      list-style-type: none;
+    }
+
+    &__list {
+      padding: 1rem;
+      font-size: 1.5rem;
+      color: #000;
+
+      &--active {
+        color: #ff002c;
+      }
+
+      &:hover {
+        background-color: #eee;
+      }
+    }
+
+    &__link {
+      text-decoration: none;
+      color: inherit;
+    }
+  }
