removed margin mantra

--- a/src/static/css/components/Mantra/mantra.scss
+++ b/src/static/css/components/Mantra/mantra.scss
@@ -5,7 +5,7 @@
     object-fit: cover;
     // background-attachment: fixed;
     padding: 2rem 0;
-    margin-top: 2rem;
+    // margin-top: 2rem;
 
     &__primary {
         font-family: 'Hearth Stone', sans-serif;
