--- a/src/static/css/components/Offer/_offer.scss
+++ b/src/static/css/components/Offer/_offer.scss
@@ -130,6 +130,14 @@
             padding-right: 15px;
 
         }
+
+        &--signature {
+
+            h1 {
+                font-family: "Hearth Stone",sans-serif;
+                color: #f4e22c;
+            }
+        }
     }
 }
 
