--- a/src/static/css/components/Carousel/_carousel.scss
+++ b/src/static/css/components/Carousel/_carousel.scss
@@ -4,7 +4,8 @@
     &__img {
         display: flex;
         justify-content: center;
-        height: 85vh;
+        // height: 85vh;
+        height: 95vh;
     }
 
     &__caption {
