--- a/src/static/css/components/Contact/Contact.scss
+++ b/src/static/css/components/Contact/Contact.scss
@@ -1,6 +1,9 @@
 .enquiry {
     // margin: 5rem 0;
-    padding: 5rem 0;
+    // padding: 5rem 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-bottom: 0;
     background: #f5f5f5;
     min-height:90vh;
