--- a/src/static/css/components/Footer/_footer.scss
+++ b/src/static/css/components/Footer/_footer.scss
@@ -4,7 +4,7 @@
     margin-bottom: 0%;
     &__wrapper {
         display: flex;
-        flex-direction: column;
+        // flex-direction: column;
         justify-content: space-around;
         width: 100%;
 
@@ -35,11 +35,11 @@
         color: #fff;
         font-size: .75rem;
         white-space: nowrap;
-        padding-top: 0.25rem;
-        @include respond(tab-port) { // width < 900?
-            order: 2;
-            grid-column: 1 / -1;
-        }
+        // padding-top: 0.25rem;
+        // @include respond(tab-port) { // width < 900?
+        //     order: 2;
+        //     grid-column: 1 / -1;
+        // }
     }
 
     &__item {
