--- a/src/static/css/components/Navbar/navbar.scss
+++ b/src/static/css/components/Navbar/navbar.scss
@@ -74,7 +74,7 @@
   .navbar-list-active{
     font-size: 3rem;
     text-decoration: none;
-    color: #FF002C;
+    color: #7ccdce;
  
   }
   .navbar-list{
@@ -85,12 +85,12 @@
   }
   .navbar-list:hover{
     font-size: 3rem;
-    color: #FF002C;
+    color: #7ccdce;
     text-decoration: none;
   }
   .navbar-list-active:hover{
     font-size: 3rem;
-    color: #FF002C;
+    color: #7ccdce;
     text-decoration: none;
   }
   
@@ -173,7 +173,7 @@
       color: #000;
 
       &--active {
-        color: #ff002c;
+        color: #7ccdce;
       }
 
       &:hover {
