First video changes done

--- a/src/static/css/components/Offer/_offer.scss
+++ b/src/static/css/components/Offer/_offer.scss
@@ -53,7 +53,7 @@
         }
 
         &-subheading {
-            margin-top: 1rem;
+            margin-bottom: 1rem;
             color: #7ccdce;
         }
 
