removed desktop navbar

--- a/src/static/css/base/_layout.scss
+++ b/src/static/css/base/_layout.scss
@@ -38,6 +38,22 @@
     }
 }
 
+.tablet {
+    display: block !important;
+
+    @media (min-width: 1120px) {
+        display: none !important;
+    }
+}
+
+.tablet-desktop {
+    display: none !important;
+
+    @media (min-width: 1120px) {
+        display: block !important;
+    }
+}
+
 .desktop {
     display: none !important;
 
