--- a/src/static/css/components/Founder/_founder.scss
+++ b/src/static/css/components/Founder/_founder.scss
@@ -48,7 +48,7 @@
         margin-bottom: 1rem;
 
         &--signature {
-            margin-bottom: 0;
+            margin-bottom: 5px;
             font-size: 1.875rem;
             margin-top: 0;
             font-family: 'Hearth Stone', sans-serif;
