--- a/src/static/css/components/Mantra/mantra.scss
+++ b/src/static/css/components/Mantra/mantra.scss
@@ -11,6 +11,7 @@
         font-family: 'Hearth Stone', sans-serif;
         font-size: 4.5rem;
         font-weight: 500;
+        padding: 1rem;
         
         @media (min-width: 768px) {
             font-size: 6.5625rem;
