--- a/src/static/css/base/_base.scss
+++ b/src/static/css/base/_base.scss
@@ -3,17 +3,8 @@
 @font-face {
     font-family: 'Hearth Stone';
     src: url('Hearth_Stone.ttf');
+    font-display: swap;
 }
-
-// @font-face {
-//     font-family: 'Poppins-Regular';
-//     src: url('../../font/Poppins-Regular.ttf');
-// }
-
-// @font-face {
-//     font-family: 'Poppins-Semi';
-//     src: url('../../font/Poppins-SemiBold.ttf');
-// }
 
 *, *::before, *::after {
     margin: 0;
