--- a/src/static/css/components/Dropdown/_dropdown.scss
+++ b/src/static/css/components/Dropdown/_dropdown.scss
@@ -46,7 +46,7 @@
         border: none;
         padding: .4rem 0;
         font-size: .875rem;
-        color: #cbcbcb;
+        color: #121111;
         // border-bottom: 1px solid #cbcbcb;
 
         &:disabled {
@@ -54,7 +54,7 @@
         }
 
         &::placeholder {
-            color: #cbcbcb;
+            color: #121111;
         }
     }
 
