--- a/src/static/css/components/Contact/Contact.scss
+++ b/src/static/css/components/Contact/Contact.scss
@@ -3,12 +3,12 @@
     // padding: 5rem 0;
     display: flex;
     align-items: center;
-    // flex-direction: column;
-    // justify-content: center;
+    flex-direction: column;
+    justify-content: center;
     margin-bottom: 0;
     background: #f5f5f5;
-    margin-top: 110px;
-    height: calc(100% - 110px);
+    min-height: calc(100% );
+  
 
     &__medium {
         padding-left: 15px;
@@ -141,6 +141,7 @@
 }
 
 .container-enquiry {
+    margin-top: 110px;
     @media (min-width: 1120px) {
         max-width: 960px;
     }
