--- a/src/static/css/components/Contact/Contact.scss
+++ b/src/static/css/components/Contact/Contact.scss
@@ -7,7 +7,7 @@
     justify-content: center;
     margin-bottom: 0;
     background: #f5f5f5;
-    min-height: calc(100vh );
+    min-height: calc(100vh - 100px );
   
 
     &__medium {
