--- a/src/static/css/components/Dropdown/_dropdown.scss
+++ b/src/static/css/components/Dropdown/_dropdown.scss
@@ -45,7 +45,7 @@
         outline: none;
         border: none;
         padding: .4rem 0;
-        font-size: .875rem;
+        font-size: 1rem;
         color: #121111;
         // border-bottom: 1px solid #cbcbcb;
 
